--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body style="background-color: black;">
+<body>
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
@@ -30,9 +31,9 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/web_development.html">Web Development</a></li>
-              <li><a class="dropdown-item" href="/python.html">Python</a></li>
+              <li><a class="dropdown-item" href="/python.html">Python Programming</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="mySql.html">mySQL</a></li>
+              <li><a class="dropdown-item" href="mySql.html">Data Analyst</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -72,19 +73,63 @@
     </button>
   </div>
 
+  
+  <div class="album py-5 bg-body-Dar">
+    <div class="container">
+
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="web_dev.jpg" width="100%" height="225">
+            <div class="card-body">
+              <a href="web_development.html"><p class="card-text">Web Development</p></a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="python.jpg" width="100%" height="225">
+            <div class="card-body">
+              <a href="python.html"><p class="card-text">Python Programming</p></a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="data.jpg" width="100%" height="225">
+            <div class="card-body">
+              <a href="mySql.html"><p class="card-text">Data Analyst</p></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container" style="height: 200px; width: 100%;">
+    <a href="https://www.facebook.com/profile.php?id=100076816921999"><i class="fa-brands fa-facebook"></i></a>
+    <a href="https://www.threads.net/@_ahmed.py"><i class="fa-brands fa-twitter"></i></a>
+    <a href="https://www.instagram.com/_ahmed.py/"><i class="fa-brands fa-instagram"></i></a>
+    <a href="https://github.com/AhmedAli07062001"><i class="fa-brands fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/ahmed-ali-662048272/"><i class="fa-brands fa-linkedin"></i></a>
+    <a href="http://ahmedali2909@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+    <a href="http://wa.me/+918826395192"><i class="fa-brands fa-whatsapp"></i></a>
+  </div>
+
+
   <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-      <p class="col-md-4 mb-0 text-body-light" style="color: white;">© 2024 February 06</p>
+      <p class="col-md-4 mb-0 text-body-Primary" style="color: rgb(0, 123, 255);">© 2024 February 06</p>
 
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
       </a>
 
       <ul class="nav col-md-4 justify-content-end">
-        <li class="nav-link"><a href="/index.html" class="nav-link px-2 text-body-light"style = "color: white;">Home</a></li>
-        <li class="nav-link"><a href="/resume.html" class="nav-link px-2 text-body-light"style = "color: white;">Resume</a></li>
-        <li class="nav-link"><a href="/contact.html" class="nav-link px-2 text-body-light"style = "color: white;">Contact Us</a></li>
-        <li class="nav-link"><a href="/about.html" class="nav-link px-2 text-body-light"style = "color: white;">About</a></li>
+        <li class="nav-link"><a href="/index.html" class="nav-link px-2 text-body-light">Home</a></li>
+        <li class="nav-link"><a href="/resume.html" class="nav-link px-2 text-body-light">Resume</a></li>
+        <li class="nav-link"><a href="/contact.html" class="nav-link px-2 text-body-light">Contact Us</a></li>
+        <li class="nav-link"><a href="/about.html" class="nav-link px-2 text-body-light">About</a></li>
     </footer>
   </div>
     
