--- a/index.html
+++ b/index.html
@@ -13,34 +13,34 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/ahmed.html">Ahmed Ali</a>
+      <a class="navbar-brand" href="/portfolio/ahmed.html">Ahmed Ali</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="/portfolio/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/resume.html">Resume</a>
+            <a class="nav-link" href="/portfolio/resume.html">Resume</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Project
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/web_development.html">Web Development</a></li>
-              <li><a class="dropdown-item" href="/python.html">Python Programming</a></li>
+              <li><a class="dropdown-item" href="/portfolio/web_development.html">Web Development</a></li>
+              <li><a class="dropdown-item" href="/portfolio/python.html">Python Programming</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="mySql.html">Data Analyst</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact Us</a>
+            <a class="nav-link" href="/portfolio/contact.html">Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/portfolio/about.html">About</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -82,7 +82,7 @@
           <div class="card shadow-sm">
             <img src="web_dev.jpg" width="100%" height="225">
             <div class="card-body">
-              <a href="web_development.html"><p class="card-text">Web Development</p></a>
+              <a href="/portfolio/web_development.html"><p class="card-text">Web Development</p></a>
             </div>
           </div>
         </div>
@@ -90,7 +90,7 @@
           <div class="card shadow-sm">
             <img src="python.jpg" width="100%" height="225">
             <div class="card-body">
-              <a href="python.html"><p class="card-text">Python Programming</p></a>
+              <a href="/portfolio/python.html"><p class="card-text">Python Programming</p></a>
             </div>
           </div>
         </div>
@@ -98,7 +98,7 @@
           <div class="card shadow-sm">
             <img src="data.jpg" width="100%" height="225">
             <div class="card-body">
-              <a href="mySql.html"><p class="card-text">Data Analyst</p></a>
+              <a href="/portfolio/mySql.html"><p class="card-text">Data Analyst</p></a>
             </div>
           </div>
         </div>
@@ -126,10 +126,10 @@
       </a>
 
       <ul class="nav col-md-4 justify-content-end">
-        <li class="nav-link"><a href="/index.html" class="nav-link px-2 text-body-light">Home</a></li>
-        <li class="nav-link"><a href="/resume.html" class="nav-link px-2 text-body-light">Resume</a></li>
-        <li class="nav-link"><a href="/contact.html" class="nav-link px-2 text-body-light">Contact Us</a></li>
-        <li class="nav-link"><a href="/about.html" class="nav-link px-2 text-body-light">About</a></li>
+        <li class="nav-link"><a href="/portfolio/index.html" class="nav-link px-2 text-body-light">Home</a></li>
+        <li class="nav-link"><a href="/portfolio/resume.html" class="nav-link px-2 text-body-light">Resume</a></li>
+        <li class="nav-link"><a href="/portfolio/contact.html" class="nav-link px-2 text-body-light">Contact Us</a></li>
+        <li class="nav-link"><a href="/portfolio/about.html" class="nav-link px-2 text-body-light">About</a></li>
     </footer>
   </div>
     
