--- a/index.html
+++ b/index.html
@@ -6,41 +6,41 @@
     <title>Ahmed Ali Portfolio</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/portfolio/ahmed.html">Ahmed Ali</a>
+      <a class="navbar-brand" href="/ahmed.html">Ahmed Ali</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/portfolio/index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/portfolio/resume.html">Resume</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="/resume.html">Resume</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Project
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/portfolio/web_development.html">Web Development</a></li>
-              <li><a class="dropdown-item" href="/portfolio/python.html">Python Programming</a></li>
+              <li><a class="dropdown-item" href="/web_development.html">Web Development</a></li>
+              <li><a class="dropdown-item" href="/python.html">Python Programming</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="mySql.html">Data Analyst</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/portfolio/contact.html">Contact Us</a>
+            <a class="nav-link" href="/contact.html">Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/portfolio/about.html">About</a>
+            <a class="nav-link" href="/about.html">About</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -82,7 +82,7 @@
           <div class="card shadow-sm">
             <img src="web_dev.jpg" width="100%" height="225">
             <div class="card-body">
-              <a href="/portfolio/web_development.html"><p class="card-text">Web Development</p></a>
+              <a href="web_development.html"><p class="card-text">Web Development</p></a>
             </div>
           </div>
         </div>
@@ -90,7 +90,7 @@
           <div class="card shadow-sm">
             <img src="python.jpg" width="100%" height="225">
             <div class="card-body">
-              <a href="/portfolio/python.html"><p class="card-text">Python Programming</p></a>
+              <a href="python.html"><p class="card-text">Python Programming</p></a>
             </div>
           </div>
         </div>
@@ -98,7 +98,7 @@
           <div class="card shadow-sm">
             <img src="data.jpg" width="100%" height="225">
             <div class="card-body">
-              <a href="/portfolio/mySql.html"><p class="card-text">Data Analyst</p></a>
+              <a href="mySql.html"><p class="card-text">Data Analyst</p></a>
             </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
     </div>
   </div>
 
-  <div class="container" style="height: 200px; width: 100%;">
+  <div class="container-fluid text-center">
     <a href="https://www.facebook.com/profile.php?id=100076816921999"><i class="fa-brands fa-facebook"></i></a>
     <a href="https://www.threads.net/@_ahmed.py"><i class="fa-brands fa-twitter"></i></a>
     <a href="https://www.instagram.com/_ahmed.py/"><i class="fa-brands fa-instagram"></i></a>
@@ -119,17 +119,18 @@
 
   <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-      <p class="col-md-4 mb-0 text-body-Primary" style="color: rgb(0, 123, 255);">© 2024 February 06</p>
-
+      <p class="col-md-4 mb-0 text-body-primary" style="color: rgb(0,123,255);">© 2024 February, 09</p>
+  
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
       </a>
-
+  
       <ul class="nav col-md-4 justify-content-end">
-        <li class="nav-link"><a href="/portfolio/index.html" class="nav-link px-2 text-body-light">Home</a></li>
-        <li class="nav-link"><a href="/portfolio/resume.html" class="nav-link px-2 text-body-light">Resume</a></li>
-        <li class="nav-link"><a href="/portfolio/contact.html" class="nav-link px-2 text-body-light">Contact Us</a></li>
-        <li class="nav-link"><a href="/portfolio/about.html" class="nav-link px-2 text-body-light">About</a></li>
+        <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-body-primary">Home</a></li>
+        <li class="nav-item"><a href="/resume.html" class="nav-link px-2 text-body-primary">Resume</a></li>
+        <li class="nav-item"><a href="/contact.html" class="nav-link px-2 text-body-primary">Contact Us</a></li>
+        <li class="nav-item"><a href="/about.html" class="nav-link px-2 text-body-primary">About</a></li>
+      </ul>
     </footer>
   </div>
     
