--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="/contact.html">Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/portfolio/about.html">About</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
